--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,11 @@ navigationRuntimeKtx = "2.8.3"
 navigationCompose = "2.8.3"
 firebaseFirestoreKtx = "25.1.1"
 roomCommon = "2.6.1"
+roomCompiler = "2.6.1"
 roomKtx = "2.6.1"
+runtimeLivedata = "1.6.3"
+kotlinxSerializationJson = "1.6.3"
+kotlinxSerialization = "1.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
